--- a/playbook.yaml
+++ b/playbook.yaml
@@ -10,3 +10,6 @@
     - name: do upgrade
       apt:
         upgrade: yes
+    - name: Remove unused packages (autoremove)
+      apt:
+        autoremove: yes
