--- a/playbook.yaml
+++ b/playbook.yaml
@@ -11,6 +11,9 @@
       file:
         path: output
         state: directory
+    - name: Generate hashed password
+      set_fact:
+        hashed_password: "{{ password | password_hash('sha512') }}"
 
     - name: Generate cloud-init user-data content
       template:
