--- a/variables/variables.yaml
+++ b/variables/variables.yaml
@@ -24,7 +24,7 @@ locale: en_US.UTF-8
 
 # USERS PART
 runcmd: ['apt purge -y snapd', 'rm -rf /root/snap']
-runcmd_hardened: ['apt purge -y snapd', 'rm -rf /root/snap', 'touch /root/hardenedworks.txt']
+runcmd_hardened: ['apt purge -y snapd', 'rm -rf /root/snap', 'git clone {{ os_hard_link }} /root/repo', 'ansible-playbook /root/repo/main.yaml']
 timezone: Europe/Vilnius
 hostname: changedbyansible
 username: ansible
