--- a/variables/variables.yaml
+++ b/variables/variables.yaml
@@ -36,12 +36,19 @@ boot_efi_size: 100M
 boot_size: 2G
 dev_sda3: 70G
 root_size: 10G
+root_fs: ext4
 home_size: 5G
+home_fs: ext4
 var_size: 1G
+var_fs: ext4
 var_log_size: 2G
+var_log_fs: ext4
 var_log_audit_size: 2G
+var_log_audit_fs: ext4
 var_tmp_size: 1G
+var_tmp_fs: ext4
 tmp_size: 2G
+tmp_fs: ext4
 
 
 
